# wilem

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json  post_create.sh
tests/files/: bancogalicia.txt  pabex.txt
wilem/: constantes.py  constants.py  domain_utils.py  exceptions.py  fuzzer.py
wilem/tests/: test_domain_fuzzer.py
wilem/tests/files/: mercadolibre.txt
