[tool.poetry]
name = "wilem"
version = "0.1.0"
description = "Words analyzer y comparator, oriented to phishing domains filters."
authors = ["Francisco <j.f.maurino@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
include = ["wilem/py.typed"]

[tool.poetry.dependencies]
python = "^3.11"
tld = "^0.13"
pytest = "^7.4.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
isort = "^5.12.0"
black = "^23.3.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.flake8]
max-line-length = 130
select = ['C', 'E', 'F', 'W', 'B', 'B950']
extend-ignore = ['E203', 'E501', 'W605']
exclude = "./mypy_cache"


[tool.black]
line-length = 130
exclude = '''
/(
  \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''

[tool.mypy]
strict = true
